--- a/.github/workflows/upload-to-dockerhub.yaml
+++ b/.github/workflows/upload-to-dockerhub.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@main
       with:
-        name: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}
+        name: ${{ secrets.DOCKER_USERNAME }}/pymapas
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tags: ${{ env.TAG }}
+        tags: latest
